# TileXR

./: .gitattributes  .gitignore  .gitmodules  BUILD_VERIFICATION.md  CLAUDE.md  CMakeLists.txt  README.md  UDMA_INTEGRATION_SUMMARY.md  cann_download_install.sh  cann_local_install.sh  common_env.sh  common_util.sh  hcomm_build_install.sh  hcomm_local_install.sh  ops_build_run.sh  ops_only_run.sh  prepare.sh  test_allreduce.sh
comm/: CMakeLists.txt  comm_wrap.cpp  tilexr_comm.cpp  tilexr_comm.h  tilexr_internal.cpp  tilexr_internal.h
comm/tools/socket/: sock_exchange.cpp  sock_exchange.h
docs/: BUILD_VERIFICATION.md  CANN_VERSION_MIGRATION.md  SDMA_TRANSPORT.md  SHMEM_INTEGRATION.md  UDMA_INTEGRATION_SUMMARY.md  UDMA_TEST_STATUS.md
docs/diagrams/: architecture-overview.drawio
docs/superpowers/plans/: 2026-05-30-collective-performance-profiling.md  2026-06-01-collective-profile-timeline-aggregation.md  2026-06-05-standalone-collectives.md  2026-06-22-data-as-flag.md
docs/superpowers/specs/: 2026-05-30-collective-performance-profiling-design.md  2026-06-01-collective-profile-timeline-aggregation-design.md  2026-06-22-data-as-flag-design.md
examples/mc2/: build.sh
examples/mc2/all_gather_add/: README.md
examples/mc2/common/: CMakeLists.txt
include/: comm_args.h  tilexr_api.h  tilexr_types.h
integrations/vllm_ascend/tilexr_collectives/: vllm_adapter.py
mc2/: CMakeLists.txt  build.sh
mc2/all_gather_add/: CMakeLists.txt
op-simulator/: CMakeLists.txt  README.md  compile_and_run.sh  run_test_ca.sh  test_template.cpp
op-simulator/scripts/: run.sh
op-simulator/src/: CMakeLists.txt  base_test.cpp
patches/: shmem.patch  tilexr.patch
reference/: README.md  download_ascend_transformer_boost.sh  download_cann_repos.sh  download_shmem.sh
scripts/: README.md  cann_download_install.sh  cann_local_install.sh  common_env.sh  common_util.sh  device_connect.sh  driver_fix.sh  hcomm_build_install.sh  hcomm_clean_build_install.sh  hcomm_local_install.sh  ops_build_run.sh  ops_only_run.sh  plog_grep.sh  run_ops_test.sh  test_build.sh  watch.sh
src/collectives/: CMakeLists.txt
src/collectives/cmake/: embed_collectives_kernel.cmake
src/collectives/host/: collective_kernel.cpp  collective_kernel.h  collective_launcher.cpp  collective_launcher.h  collective_utils.cpp  collective_utils.h  perf_trace_report.cpp  perf_trace_report.h  perf_trace_session.cpp  perf_trace_session.h  tilexr_collectives.cpp
src/collectives/kernels/: CMakeLists.txt  collectives.h  datacopy_gm2gm.h  datacopy_gm2gm_delay.h  lccl_op.h  op_def.h  perf_trace_kernel.h  sync_collectives.h  tilexr_lccl_op.cpp
src/collectives/kernels/91093/: allgather_hierarchy_double_ring.h
src/collectives/kernels/cmake/: CMakeCCECompiler.cmake.in  CMakeCCEInformation.cmake  CMakeDetermineCCECompiler.cmake
src/collectives/kernels/kernels/: collectives.cce  lcal_all2all_transpose.cce  lcal_allgather.cce  lcal_allgather_2npu.cce  lcal_allgather_2npu_big_data_write.cce  lcal_allgather_910B2C.cce  lcal_allgather_big_data.cce  lcal_allgather_big_data_910B2C.cce
src/comm/: CMakeLists.txt  ccl_kernel_args.h  comm_wrap.cpp  tilexr_comm.cpp  tilexr_comm.h  tilexr_internal.cpp  tilexr_internal.h  tilexr_log.h
src/comm/tools/socket/: tilexr_sock_exchange.cpp  tilexr_sock_exchange.h
src/comm/udma/: tilexr_hccp_defs.h  tilexr_hccp_loader.cpp  tilexr_hccp_loader.h  tilexr_udma_layout.cpp  tilexr_udma_layout.h  tilexr_udma_transport.cpp  tilexr_udma_transport.h
src/ep/: CMakeLists.txt
src/ep/host/: ep_kernel_launch.cpp  ep_layout.cpp  ep_layout.h
src/ep/kernels/: tilexr_ep_dispatch_kernel.cpp
src/include/: comm_args.h  tilexr_api.h  tilexr_collectives.h  tilexr_collectives_perf.h  tilexr_data_as_flag.h  tilexr_perf_trace.h  tilexr_sdma_types.h  tilexr_sync.h  tilexr_types.h  tilexr_udma.h  tilexr_udma_types.h
src/mc2/: build.sh
tests/collectives/: CMakeLists.txt  README.md  deploy_and_run_vllm_remote.sh  run_collective_perf.sh  run_collectives_correctness.sh  tilexr_collective_profile_report.py
tests/collectives/cmake/: install_prefix_smoke.cmake.in
tests/collectives/common/: int32_pattern.h
tests/collectives/integration/: test_tilexr_collectives_correctness.cpp
tests/collectives/tilexr-tests/: tilexr_collective_perf.cpp
tests/collectives/unit/: test_collective_host_utils.cpp  test_collective_perf_report.cpp  test_collective_perf_session.cpp  test_collective_profile_report.py  test_prepare_host_launch_context.cpp  test_tilexr_collectives_api.cpp  test_tilexr_collectives_header_compile.cpp  test_tilexr_collectives_kernel_ownership.cpp  test_tilexr_collectives_stub_behavior.cpp  test_tilexr_collectives_tools_sources.cpp  test_tilexr_collectives_uninitialized_comm.cpp  test_tilexr_comm_next_magic.cpp  test_tilexr_perf_trace_layout.cpp  test_vllm_collectives_integration_sources.py
tests/comm/: CMakeLists.txt  build.sh  run_tests.sh
tests/comm/unit/: test_tilexr_log.cpp  test_tilexr_log_spdlog_compile.cpp  test_tilexr_no_mki_log_dependency.cpp  test_tilexr_source_guards.cpp
tests/comm/unit/fake_spdlog/spdlog/: spdlog.h
tests/data_as_flag/: CMakeLists.txt
tests/data_as_flag/unit/: test_tilexr_data_as_flag_header_compile.cpp  test_tilexr_data_as_flag_source_guard.cpp
tests/ep/: CMakeLists.txt  README.md
tests/ep/demo/: run_tilexr_ep_dispatch_demo.sh
tests/ep/unit/: test_tilexr_ep_api_sources.cpp  test_tilexr_ep_kernel_sources.cpp  test_tilexr_ep_layout.cpp
tests/memory/: README.md
tests/reference/: test_download_cann_repos.sh
tests/sdma/: CMakeLists.txt  build.sh  run_tests.sh
tests/sdma/demo/: run_tilexr_sdma_demo.sh  tilexr_sdma_demo_kernel.cpp
tests/sdma/unit/: test_tilexr_sdma_api_invalid.cpp  test_tilexr_sdma_metadata.cpp
tests/udma/: CMakeLists.txt  QUICKSTART.md  README.md  TEST_GUIDE_FOR_AI.md  build.sh  run_tests.sh
tests/udma/demo/: ASCEND_VERIFICATION.md  run_tilexr_udma_demo.sh  tilexr_udma_demo.cpp
tests/udma/integration/: test_tilexr_udma.cpp
tests/udma/unit/: test_shmem_api.cpp  test_tilexr_no_shmem_dependency.cpp  test_tilexr_udma_transport_layout.cpp
(+64 files in other folders)
